--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 
 # Dossiers et fichiers générés par Composer
 /vendor/
-/bin/
 /composer.phar
 /composer.lock
 
@@ -29,3 +28,10 @@
 *~
 *.swp
 .DS_Store
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
