Update notifications + command to set cron (weekly deals) + add apiplatform

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Controller\AccountAlertController:
+        arguments: ['@doctrine.orm.entity_manager']
+
+    # App\Service\AlertService:
+    #     arguments:
+    #         $mailer: '@Symfony\Component\Mailer\MailerInterface'
