--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
         "fakerphp/faker": "^1.22",
-        "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.22",
         "sensio/framework-extra-bundle": "^6.2",
@@ -33,7 +32,7 @@
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
-        "symfonycasts/reset-password-bundle": "^1.17",
+        "symfonycasts/reset-password-bundle": "*",
         "symfonycasts/verify-email-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
